fix(ui): fix comming soon page

--- a/app/docs/react/advanced/page.mdx
+++ b/app/docs/react/advanced/page.mdx
@@ -1,4 +1,5 @@
-**01. What is React Fiber and how does it improve performance?**
+## **01. What is React Fiber and how does it improve performance?**
+
 React Fiber is the complete rewrite of the React core algorithm introduced in React 16. Its goal was to enable incremental rendering — splitting work into chunks that can be paused, aborted, or reused.
 This allows React to prioritize updates (e.g., animations over data fetching), leading to smoother UIs even during heavy computations.
 
@@ -16,7 +17,8 @@ function App() {
 
 ---
 
-**02. Explain the concept of Concurrent Rendering in React.**
+## **02. Explain the concept of Concurrent Rendering in React.**
+
 Concurrent Rendering allows React to prepare multiple versions of the UI at the same time. It improves responsiveness by making rendering interruptible, allowing higher-priority updates (like user input) to happen without blocking.
 
 ```js
@@ -32,7 +34,8 @@ This separates urgent state (like typing) from non-urgent UI (like filtering), r
 
 ---
 
-**03. How does React handle reconciliation?**
+## **03. How does React handle reconciliation?**
+
 Reconciliation is the process React uses to update the DOM efficiently. React compares the new Virtual DOM with the previous one using a diffing algorithm. It updates only the parts of the DOM that have changed.
 
 React uses keys to track which items changed in a list:
@@ -45,7 +48,8 @@ Wrong or missing keys can lead to incorrect UI behavior or performance issues.
 
 ---
 
-**04. What are React Server Components (RSC)?**
+## **04. What are React Server Components (RSC)?**
+
 Server Components allow you to render parts of your app on the server — reducing bundle size and improving performance. Unlike SSR, they don’t ship their code to the client.
 
 ```tsx
@@ -66,7 +70,7 @@ They work seamlessly with client components and can reduce unnecessary data fetc
 
 ---
 
-**05. Explain the difference between useEffect and useLayoutEffect.**
+## **05. Explain the difference between useEffect and useLayoutEffect.**
 
 - `useEffect`: Runs **after the paint**. Good for data fetching and non-blocking side effects.
 - `useLayoutEffect`: Runs **before the paint**, blocking the browser. Good for measuring DOM size/position.
@@ -81,7 +85,8 @@ Use `useLayoutEffect` sparingly, as it can block rendering and hurt performance.
 
 ---
 
-**06. What is Suspense and how does it work with data fetching?**
+## **06. What is Suspense and how does it work with data fetching?**
+
 Suspense lets you "pause" rendering while data is loading, until the required data is ready. This is especially powerful when combined with frameworks like Relay or React Query.
 
 ```jsx
@@ -94,7 +99,8 @@ Suspense lets you "pause" rendering while data is loading, until the required da
 
 ---
 
-**07. How does React's batching work, and what changed in React 18?**
+## **07. How does React's batching work, and what changed in React 18?**
+
 Batching means React groups multiple state updates into one render to improve performance.
 
 In React 18, automatic batching was extended beyond event handlers (e.g., in timeouts, fetches, etc.):
@@ -111,7 +117,8 @@ This reduces unnecessary re-renders and improves rendering efficiency.
 
 ---
 
-**08. What are Custom Hooks and how do you structure them effectively?**
+## **08. What are Custom Hooks and how do you structure them effectively?**
+
 Custom Hooks encapsulate reusable logic using other hooks. They help abstract away complexity, such as API fetching, form state, or timers.
 
 ```js
@@ -129,7 +136,8 @@ Custom Hooks can also return multiple values or objects to make them easier to c
 
 ---
 
-**09. Explain the useImperativeHandle hook.**
+## **09. Explain the useImperativeHandle hook.**
+
 `useImperativeHandle` lets you customize what values are exposed to parent components when using `ref`. This is useful for building controlled components.
 
 ```js
@@ -142,7 +150,8 @@ This protects internal implementation and offers a clean interface to interact w
 
 ---
 
-**10. What is the Virtual DOM and how does it differ from the real DOM?**
+## **10. What is the Virtual DOM and how does it differ from the real DOM?**
+
 The Virtual DOM is an in-memory representation of the actual DOM. React uses it to compute the minimal set of changes needed to update the UI, improving performance.
 
 Rather than manipulating the DOM directly, React:
@@ -155,7 +164,8 @@ This makes updates faster and reduces layout thrashing.
 
 ---
 
-**11. How do React Hooks avoid stale closures in async calls?**
+## **11. How do React Hooks avoid stale closures in async calls?**
+
 React Hooks use closures, so stale values can occur in asynchronous logic.
 
 ```js
@@ -171,7 +181,8 @@ To fix this, use refs or always use the latest value inside the effect, or cance
 
 ---
 
-**12. What are Render Props and when should you use them?**
+## **12. What are Render Props and when should you use them?**
+
 Render Props is a pattern where a component takes a function as a prop and uses it to render something.
 
 ```js
@@ -189,7 +200,8 @@ Useful when sharing logic (like mouse, scroll, drag) between components. However
 
 ---
 
-**13. How does Context API avoid prop drilling?**
+## **13. How does Context API avoid prop drilling?**
+
 Context provides a way to pass data deep through the component tree without manually passing props.
 
 ```js
@@ -213,7 +225,7 @@ Context is good for global states like themes, auth, or locale, but overuse can 
 
 ---
 
-**14. What are some strategies to optimize React performance?**
+## **14. What are some strategies to optimize React performance?**
 
 - **Memoization**: use `React.memo`, `useMemo`, `useCallback`
 - **Code-splitting**: Lazy load components with `React.lazy`
@@ -229,7 +241,8 @@ const MemoizedComponent = React.memo(Component);
 
 ---
 
-**15. How do React DevTools detect unnecessary re-renders?**
+## **15. How do React DevTools detect unnecessary re-renders?**
+
 React DevTools highlights components that re-render with no prop/state changes. It can track renders, show why a component re-rendered, and suggest optimizations.
 
 You can also use `why-did-you-render` to log re-renders:
