--- a/app/docs/react/basic/page.mdx
+++ b/app/docs/react/basic/page.mdx
@@ -1,4 +1,4 @@
-### **01. What is React?**
+## **01. What is React?**
 
 **React** is a declarative, component-based JavaScript library for building **user interfaces**, especially for **single-page applications (SPAs)**. Developed by Facebook, React lets you build UI components that manage their own state and can be composed to make complex UIs.
 
@@ -22,7 +22,7 @@ This UI piece can now be reused across your app — on home, profile, team page,
 
 ---
 
-### **02. What is JSX in React?**
+## **02. What is JSX in React?**
 
 JSX (JavaScript XML) is a **syntax extension** that allows writing HTML elements directly within JavaScript code. It's not valid JavaScript by default, so **Babel** (a compiler) is used to convert JSX into regular JavaScript calls like `React.createElement()`.
 
@@ -48,7 +48,7 @@ Behind the scenes, this turns into nested `React.createElement()` calls.
 
 ---
 
-### **03. What are components in React?**
+## **03. What are components in React?**
 
 Components are **independent, reusable pieces of UI**. They can be small, like a button, or large, like a sidebar or full page. In React, you break the UI into components to make your code **modular, testable, and reusable**.
 
@@ -85,7 +85,7 @@ Each `ProductCard` is the same component reused with different props.
 
 ---
 
-### **04. What is state in React?**
+## **04. What is state in React?**
 
 **State** is a built-in object that stores **dynamic data** in a component and allows the component to react (re-render) when that data changes. State should be used for **interactive** or **changing parts** of your component like toggles, inputs, counters, etc.
 
@@ -116,7 +116,7 @@ Each click updates the `count` state and triggers a UI re-render.
 
 ---
 
-### **05. What are props in React?**
+## **05. What are props in React?**
 
 **Props** (short for “properties”) are how components **receive data** from their parent components. They are **read-only**, meaning a child cannot modify them. Props help in **passing dynamic values** to reusable components and in creating more flexible UIs.
 
@@ -143,7 +143,7 @@ This reuses `WelcomeMessage` to greet different users using different props.
 
 ---
 
-### **06. What is the difference between state and props in React?**
+## **06. What is the difference between state and props in React?**
 
 Both **state** and **props** are used to manage data in React, but they serve different purposes:
 
@@ -180,7 +180,7 @@ function App() {
 
 ---
 
-### **07. What is a React hook?**
+## **07. What is a React hook?**
 
 Hooks are **functions** introduced in React 16.8 that let you “hook into” React features like **state**, **lifecycle**, and **context** from **functional components**.
 
@@ -208,7 +208,7 @@ This shows the real-time clock using `useState` and `useEffect`.
 
 ---
 
-### **08. What is useEffect and when to use it?**
+## **08. What is useEffect and when to use it?**
 
 `useEffect` is a React hook that lets you **run side effects** in your component — like data fetching, setting up subscriptions, DOM updates, or timers.
 
@@ -242,7 +242,7 @@ This runs **once**, like `componentDidMount`.
 
 ---
 
-### **09. What is conditional rendering in React?**
+## **09. What is conditional rendering in React?**
 
 **Conditional rendering** means showing or hiding parts of the UI based on a condition. In React, this is done using `if`, `ternary ( ? : )`, `&&`, or early `return`.
 
@@ -267,7 +267,7 @@ Here we check for a user before rendering their profile. This prevents errors li
 
 ---
 
-### **10. What are keys in React and why are they important?**
+## **10. What are keys in React and why are they important?**
 
 **Keys** help React **identify which items changed, added, or removed** from a list. They're critical when rendering dynamic lists — without them, React may re-render inefficiently or wrongly reuse elements.
 
