--- a/app/docs/redux/advanced/page.mdx
+++ b/app/docs/redux/advanced/page.mdx
@@ -1,4 +1,4 @@
-### **1. What are Redux Middlewares and how do they work?**
+## **1. What are Redux Middlewares and how do they work?**
 
 **Explanation:**
 Middlewares in Redux intercept actions before they reach the reducer. They allow for logging, async operations, error handling, etc. Middleware functions have access to `dispatch` and `getState`, and they can modify or delay actions.
@@ -14,7 +14,7 @@ const logger = (store) => (next) => (action) => {
 
 ---
 
-### **2. What is the purpose of Redux Thunk?**
+## **2. What is the purpose of Redux Thunk?**
 
 **Explanation:**
 Redux Thunk allows you to write action creators that return a function instead of an action. This function can dispatch multiple actions and access the state asynchronously — useful for API calls or delayed logic.
@@ -33,7 +33,7 @@ const fetchUsers = () => {
 
 ---
 
-### **3. How does Redux Toolkit simplify Redux development?**
+## **3. How does Redux Toolkit simplify Redux development?**
 
 **Explanation:**
 Redux Toolkit (RTK) abstracts away boilerplate code, provides built-in `createSlice`, `createAsyncThunk`, and immutability with Immer. It enforces best practices and makes Redux easier and more readable.
@@ -52,7 +52,7 @@ const counterSlice = createSlice({
 
 ---
 
-### **4. How does Immer work in Redux Toolkit?**
+## **4. How does Immer work in Redux Toolkit?**
 
 **Explanation:**
 Immer lets you write "mutating" logic in reducers, but under the hood it keeps the state immutable by tracking changes and returning a new object. RTK uses Immer by default inside `createSlice`.
@@ -69,7 +69,7 @@ reducers: {
 
 ---
 
-### **5. What is createAsyncThunk in Redux Toolkit?**
+## **5. What is createAsyncThunk in Redux Toolkit?**
 
 **Explanation:**
 `createAsyncThunk` is used to handle async logic like API calls. It auto-generates action types for pending, fulfilled, and rejected states, helping you manage loading, success, and error cases easily.
@@ -85,7 +85,7 @@ export const fetchPosts = createAsyncThunk("posts/fetch", async () => {
 
 ---
 
-### **6. What are selectors in Redux and why use reselect?**
+## **6. What are selectors in Redux and why use reselect?**
 
 **Explanation:**
 Selectors are functions that retrieve specific parts of the state. Reselect is a library to create memoized selectors — it avoids recomputing derived data unless input state changes, improving performance.
@@ -101,7 +101,7 @@ const selectPublished = createSelector([selectPosts], (posts) =>
 
 ---
 
-### **7. Explain the Redux DevTools Extension.**
+## **7. Explain the Redux DevTools Extension.**
 
 **Explanation:**
 Redux DevTools let you inspect actions, state changes, and time-travel debug your Redux app. You connect it via middleware or with Redux Toolkit’s `configureStore` which supports it out of the box.
@@ -114,7 +114,7 @@ const store = configureStore({ reducer: rootReducer });
 
 ---
 
-### **8. What is the difference between Redux and Context API?**
+## **8. What is the difference between Redux and Context API?**
 
 **Explanation:**
 Context API is simpler and good for low-frequency updates and static global state. Redux is better for complex apps with frequent state changes, time-travel debugging, and middleware support.
@@ -124,7 +124,7 @@ Use Redux for apps with async API calls and dev tooling needs; use Context for t
 
 ---
 
-### **9. How do you persist Redux state?**
+## **9. How do you persist Redux state?**
 
 **Explanation:**
 You can persist Redux state using libraries like `redux-persist`, which stores parts of your state in `localStorage`, `sessionStorage`, etc., and rehydrates them on app reload.
@@ -137,7 +137,7 @@ import { persistStore, persistReducer } from "redux-persist";
 
 ---
 
-### **10. How do you handle side effects in Redux besides Thunk?**
+## **10. How do you handle side effects in Redux besides Thunk?**
 
 **Explanation:**
 Other side-effect libraries include `redux-saga` and `redux-observable`. `redux-saga` uses generator functions for more complex async flows, making it easy to cancel, debounce, and coordinate actions.
