feat: added 5 more question on express

--- a/app/docs/expressjs/basic/page.mdx
+++ b/app/docs/expressjs/basic/page.mdx
@@ -7,7 +7,8 @@
 It saves time by providing shortcuts for common tasks like routing and middleware.
 It’s widely used for building RESTful APIs (e.g., for mobile apps) and web applications.
 It has a huge community, so you can find plenty of tutorials and plugins.
-Example:
+
+📦 **Example:**
 Imagine you want to create a website where users can visit different pages (like a homepage or about page). Express makes it easy to define what happens when users visit those pages without needing to handle low-level server details.
 
 ---
@@ -16,7 +17,7 @@ Imagine you want to create a website where users can visit different pages (like
 
 To use Express.js, you need to install it in your Node.js project using npm (Node Package Manager). This adds Express to your project so you can use its features.
 
-**Steps to Install:**
+🔹 **Steps to Install:**
 
 1. Create a project folder and navigate to it:
 
@@ -39,7 +40,7 @@ npm install express
 
 4. This command downloads Express and adds it to your project’s node_modules folder. It also updates package.json to list Express as a dependency.
 
-**Example:**
+📦 **Example:**
 
 After running `npm install express`, you can verify it’s installed by checking package.json. You’ll see something like:
 
@@ -57,7 +58,7 @@ Now you’re ready to use Express in your code!
 
 Creating a basic Express server involves setting up a Node.js application that listens for HTTP requests and sends responses. Here’s a step-by-step breakdown of how to do it.
 
-**Code Example:**
+📦 **Code Example:**
 
 ```javascript
 // 1. Import the Express module
@@ -104,7 +105,8 @@ Routing in Express is the process of determining how your application responds t
 
 It organizes your app by defining what content or action corresponds to each URL.
 For example, visiting /about might show an "About Us" page, while /contact shows a contact form.
-Example:
+
+📦 **Example:**
 
 ```javascript
 const express = require("express");
@@ -126,7 +128,7 @@ app.listen(port, () => {
 });
 ```
 
-**How it works:**
+⚙️ **How it works:**
 
 When a user visits `http://localhost:3000/`, the server responds with "Welcome to the homepage!".
 When they visit `http://localhost:3000/about`, it responds with "This is the about page.".
@@ -142,7 +144,7 @@ Modify the request or response (e.g., add data to req).
 Perform tasks like logging, authentication, or parsing data.
 End the request-response cycle or pass control to the next middleware.
 
-**Example:**
+📦 **Example:**
 
 ```javascript
 const express = require("express");
@@ -165,7 +167,7 @@ app.listen(port, () => {
 });
 ```
 
-**How it works:**
+⚙️ **How it works:**
 
 The middleware logs the HTTP method (e.g., GET) and URL (e.g., /) for every request.
 `next()` ensures the request moves to the route handler.
@@ -177,13 +179,13 @@ When you visit `http://localhost:3000`, the console logs: Received a GET request
 
 In Express, middleware is added using the `app.use()` function or by specifying it for specific routes. Middleware can be applied globally (for all requests) or to specific routes. The `express.json()` middleware, for example, parses incoming JSON data so you can access it in `req.body`.
 
-Steps to Use Middleware:
+🔹 **Steps to Use Middleware:**
 
 Define or import the middleware.
 Use `app.use()` to apply it globally or pass it to a specific route.
 Ensure the middleware calls `next()` if it should pass control to the next handler.
 
-**Example:**
+📦 **Example:**
 
 ```javascript
 const express = require("express");
@@ -210,7 +212,7 @@ app.listen(port, () => {
 });
 ```
 
-**How it works:**
+⚙️ **How it works:**
 
 `app.use(express.json())`: Parses JSON data sent in POST requests.
 Custom middleware logs the time of each request.
@@ -229,7 +231,7 @@ Route parameters are dynamic parts of a URL that you define using a colon (`:`) 
 - Common for APIs or pages that display specific data.
   Example:
 
-**Example:**
+📦 **Example:**
 
 ```javascript
 const express = require("express");
@@ -246,7 +248,7 @@ app.listen(port, () => {
 });
 ```
 
-**How it works:**
+⚙️ **How it works:**
 
 Visiting `http://localhost:3000/users/123` shows: `You requested user with ID: 123`.
 Visiting `http://localhost:3000/users/abc` shows: `You requested user with ID: abc`.
@@ -258,13 +260,13 @@ The `:id` in the route captures whatever value is in that part of the URL and st
 
 POST requests are used to send data to the server, such as form submissions or API data. In Express, you handle POST requests using `app.post()` and often use the `express.json()` middleware to parse incoming JSON data.
 
-**Steps:**
+🔹 **Steps:**
 
 1. Use `app.use(express.json())` to parse JSON data.
 2. Define a route with `app.post()` to handle the POST request.
 3. Access the sent data in `req.body` and send a response.
 
-**Example:**
+📦 **Example:**
 
 ```javascript
 const express = require("express");
@@ -285,7 +287,7 @@ app.listen(port, () => {
 });
 ```
 
-**How it works:**
+⚙️ **How it works:**
 
 - Send a POST request to `http://localhost:3000/users` with JSON like `{"name": "Alice"}` (use Postman or curl).
 - The server reads the JSON data (`req.body`) and responds with: `User Alice created successfully!`.
@@ -320,7 +322,7 @@ app.listen(port, () => {
 });
 ```
 
-**How it works:**
+⚙️ **How it works:**
 
 - Send a POST request to `http://localhost:3000/submit `with JSON: `{"message": "Hello"}`.
 - The `express.json()` middleware parses the JSON, so `req.body.message` is "Hello".
@@ -337,7 +339,7 @@ app.listen(port, () => {
 - Simplifies serving assets like stylesheets, scripts, or images for your web app.
 - No need to write routes for each file.
 
-**Example:**
+📦 **Example:**
 
 1. Create a folder named `public` in your project with an `index.html` file:
 
@@ -361,7 +363,7 @@ app.listen(port, () => {
 });
 ```
 
-**How it works:**
+⚙️ **How it works:**
 
 - Visiting `http://localhost:3000/index.html` serves the `index.html` file from the `public` folder.
 - If you add `public/styles.css`, it’s available at `http://localhost:3000/styles.css`.
@@ -373,13 +375,13 @@ app.listen(port, () => {
 
 Express allows you to handle errors using special error-handling middleware. This middleware has four parameters (`err`, `req`, `res`, `next`) and is called when an error occurs in your app. You can use it to send custom error messages or log errors.
 
-**Steps:**
+🔹 **Steps:**
 
 - Define error-handling middleware at the end of your middleware stack.
 - Use `next(err)` in routes to pass errors to this middleware.
 - Send a response with an error message and status code.
 
-**Example:**
+📦 **Example:**
 
 ```javascript
 const express = require("express");
@@ -405,8 +407,197 @@ app.listen(port, () => {
 });
 ```
 
-**How it works:**
+⚙️ **How it works:**
 
 The `/` route throws an error, which is passed to the error-handling middleware via `next(err)`.
 The middleware catches the error, logs it, and sends a 500 status with a message.
 Visiting `http://localhost:3000` shows: `Oops, something broke!`.
+
+---
+
+## 12. What is the difference between `app.get()` and `app.use()`?
+
+In Express, `app.get()` and `app.use()` serve different purposes:
+
+`app.get(path, callback)`
+Defines a route handler for **GET requests** to a specific URL path. It’s used to send responses for specific routes and HTTP methods.
+
+`app.use([path], callback)`
+Applies middleware or route handlers to **all HTTP methods** (`GET`, `POST`, etc.) for a given path (or **all paths** if no path is specified). It’s commonly used for middleware.
+
+**Key Differences:**
+
+- `app.get()` is **specific to GET requests**; `app.use()` applies to **all HTTP methods**.
+- `app.get()` is typically used for **routes**; `app.use()` is used for **middleware** or general-purpose handlers.
+- `app.use()` can take an **optional path**, while `app.get()` **always requires a path**.
+
+---
+
+📦 **Example:**
+
+```js
+const express = require("express");
+const app = express();
+const port = 3000;
+
+// Middleware with app.use
+app.use((req, res, next) => {
+  console.log("This runs for ALL requests");
+  next();
+});
+
+// Route with app.get
+app.get("/home", (req, res) => {
+  res.send("Welcome to the home page!");
+});
+
+app.listen(port, () => {
+  console.log(`Server running at http://localhost:${port}`);
+});
+```
+
+⚙️ **How it works:**
+
+- The `app.use` middleware logs a message for all requests, regardless of the URL or method.
+- The `app.get` route only responds to GET requests to /home.
+- Visiting `http://localhost:3000/home` logs the middleware message and shows: `Welcome to the home page!`.
+
+---
+
+## 13. What is req.body?
+
+`req.body` is an object in Express that contains data sent by the client in the body of a request, typically in POST or PUT requests. This data could come from HTML forms, JSON payloads, or other sources. To use `req.body`, you need middleware like `express.json()` or `express.urlencoded()` to parse the data.
+
+**Why is it useful?**
+
+- It lets you access user-submitted data, like form inputs or API data.
+
+📦 **Example:**
+
+```js
+const express = require("express");
+const app = express();
+const port = 3000;
+
+// Middleware to parse JSON
+app.use(express.json());
+
+app.post("/signup", (req, res) => {
+  const { username } = req.body; // Access data from request body
+  res.send(`Welcome, ${username}!`);
+});
+
+app.listen(port, () => {
+  console.log(`Server running at http://localhost:${port}`);
+});
+```
+
+⚙️ **How it works:**
+
+- Send a POST request to `http://localhost:3000/signup` with JSON: `{"username": "Bob"}`.
+- The `express.json()` middleware parses the JSON, `so req.body.username` is "Bob".
+- The server responds: `Welcome, Bob!`.
+
+---
+
+## 14. What is req.params?
+
+`req.params` is an object in Express that holds the values of route parameters (dynamic parts of the URL defined with a colon, `:`). These parameters allow you to capture specific values from the URL to use in your route handler.
+
+📦 **Example:**
+
+```js
+const express = require("express");
+const app = express();
+const port = 3000;
+
+app.get("/books/:bookId", (req, res) => {
+  const bookId = req.params.bookId; // Get the :bookId value
+  res.send(`You requested book ID: ${bookId}`);
+});
+
+app.listen(port, () => {
+  console.log(`Server running at http://localhost:${port}`);
+});
+```
+
+⚙️ **How it works:**
+
+- The route `/books/:bookId` matches URLs like `/books/123` or `/books/abc`.
+- Visiting `http://localhost:3000/books/123` sets `req.params.bookId` to "123".
+- The server responds: `You requested book ID: 123`.
+
+---
+
+## 15. What is req.query?
+
+`req.query` is an object in Express that contains key-value pairs from the query string in a URL. The query string is the part of the URL after a ?, where parameters are written as key=value pairs, separated by &.
+
+**Why use it?**
+
+Query parameters are often used for filtering, searching, or passing optional data (e.g., search terms, page numbers).
+
+📦 **Example:**
+
+```js
+const express = require("express");
+const app = express();
+const port = 3000;
+
+app.get("/search", (req, res) => {
+  const searchTerm = req.query.q; // Get the 'q' query parameter
+  res.send(`You searched for: ${searchTerm}`);
+});
+
+app.listen(port, () => {
+  console.log(`Server running at http://localhost:${port}`);
+});
+```
+
+⚙️ **How it works:**
+
+- Visiting `http://localhost:3000/search?q=javascript` sets `req.query.q` to "javascript".
+- The server responds: You searched for: javascript.
+- Multiple query parameters (e.g., `/search?q=javascript&sort=asc`) are available as `req.query.q` and `req.query.sort`.
+
+---
+
+## 16. How do you set up CORS in Express?
+
+CORS (Cross-Origin Resource Sharing) allows your Express server to accept requests from different domains (e.g., a frontend app hosted on a different server). The cors package simplifies enabling CORS in Express.
+
+🔹 **Steps:**
+
+1. Install the cors package:
+
+```bash
+npm install cors
+```
+
+2. Use the cors middleware in your app.
+
+📦 **Example:**
+
+```js
+const express = require("express");
+const cors = require("cors");
+const app = express();
+const port = 3000;
+
+// Enable CORS for all routes
+app.use(cors());
+
+app.get("/data", (req, res) => {
+  res.json({ message: "This data can be accessed from any domain!" });
+});
+
+app.listen(port, () => {
+  console.log(`Server running at http://localhost:${port}`);
+});
+```
+
+⚙️ **How it works:**
+
+- The cors middleware adds headers to allow cross-origin requests.
+- A frontend app on `http://example.com` can now fetch data from `http://localhost:3000/data`.
+- You can customize CORS (e.g., allow specific domains) by passing options to `cors()`.
